# porthouse

./: .gitignore  README.md  cmdl.py  cmdl_env.py  entry.py  launcher.py  pyproject.toml  requirements.txt  setup.py
core/: amqp_tools.py  basemodule_async.py  config.py  exec.py  frame.py  rpc.py  rpc_async.py
core/log/: amqp_handler.py  amqp_handler_async.py  logserver.py  test_logging.py
docs/: README.md  conf.py  demo_cfg.yaml  emailer.rst  index.rst  installation.rst  scheduler.rst  slackbot.rst  sphinx_porthouse_pluging.py
docs/core/: basemodule.rst  config_system.rst  index.rst  launcher.rst  log_server.rst  logging.rst
docs/gs/: index.rst  orbit_tracker.rst  scheduler.rst  tle_server.rst
docs/mcs/: hk_dump.rst  housekeeping.rst  housekeeping_schema.rst  index.rst  openmct.rst  openmct_backend.rst  packet_router.rst  packet_router_cmdl.rst  packet_router_example.rst  packet_storage.rst
gs/calibrator/: calibrator.py
gs/hardware/: base.py  controllerbox.py  dummyrotctl.py  geometry.py  hamlib.py  hamlib_async.py  interface.py  rotator.py  test_rotator.py
gs/scheduler/: interface.py  model.py  schedule.py  scheduler.py
gs/tracking/: gnss_tracker.py  interface.py  orbit_tracker.py  point_tracker.py  test_celestial.py  test_point_tracking.py  test_tle.py  tle_server.py  utils.py
mcs/housekeeping/: README.md  __init__.py  backend.py  database.py  parsing.py
mcs/openmct/: .gitignore  README.md  connector.js  docker-build.sh  docker-compose.yml  events.js  groundstation.js  housekeeping.js  index.html  nginx.conf  package.json  server.js
mcs/openmct/container/: README  dockerfile
mcs/openmct_backend/: openmct_backend.py  utils.py
mcs/openmct_backend/services/: housekeeping.py  (+1 more)
mcs/packets/: database.py  database_api.py  packet_router.py  packet_storage.py  packets.py  router_endpoints.py  router_formatter_raw.py  router_formatter_skylink.py  satnogs_observation_import.py  satnogs_telemetry_import.py  telemetry_replayer.py
porthouse/: cmdl.py  entry.py  launcher.py
porthouse/core/: basemodule.py  basemodule_async.py  config.py  db_tools.py  frame.py  rpc.py  rpc_async.py  static_basemodule.py
porthouse/gs/: README.md
tutorial/: cfg_first_touch.yaml  housekeeping.json
(+71 files in other folders)
