
[build-system]
requires = ["setuptools"]
build-backend =  "setuptools.build_meta"

[project]
name = "porthouse"
version = "0.1"
description = "Groundstation and mission control software"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [ "sample", "asd" ]
authors = [
    {name= "Petri Niemelä", email="petri.niemela@aalto.fi"},
]
maintainers = [
    {name= "Petri Niemelä", email="petri.niemela@aalto.fi"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "matplotlib",
    "aiormq",
    "amqp",
    "skyfield",
    "ptpython",
    "argcomplete",
    "PyYAML",
    "websockets"
]

[project.urls]
"Homepage" = "https://github.com/aaltosatellite/porthouse"

[project.scripts]
porthouse="porthouse.entry:main"

[tool.setuptools]
packages = ["porthouse", "porthouse.core", "porthouse.mcs", "porthouse.gs"]
package-dir = {porthouse = "."}
